first version (without characters)

--- a/SDLKeycodeLookup.mediawiki
+++ b/SDLKeycodeLookup.mediawiki
@@ -9,19 +9,946 @@
 |<bgcolor="#EDEDED">''Hexadecimal Value''
 |<bgcolor="#EDEDED">''SDL_Keycode Constant''
 |-
-|decimal
-|hex
-|symbol
+|0
+|0x00
+|SDLK_UNKNOWN
 |-
-|decimal
-|hex
-|symbol
+|8
+|0x08
+|SDLK_BACKSPACE
+|-
+|9
+|0x09
+|SDLK_TAB
+|-
+|13
+|0x0d
+|SDLK_RETURN
+|-
+|27
+|0x1b
+|SDLK_ESCAPE
+|-
+|32
+|0x20
+|SDLK_SPACE
+|-
+|33
+|0x21
+|SDLK_EXCLAIM
+|-
+|34
+|0x22
+|SDLK_QUOTEDBL
+|-
+|35
+|0x23
+|SDLK_HASH
+|-
+|36
+|0x24
+|SDLK_DOLLAR
+|-
+|37
+|0x25
+|SDLK_PERCENT
+|-
+|38
+|0x26
+|SDLK_AMPERSAND
+|-
+|39
+|0x27
+|SDLK_QUOTE
+|-
+|40
+|0x28
+|SDLK_LEFTPAREN
+|-
+|41
+|0x29
+|SDLK_RIGHTPAREN
+|-
+|42
+|0x2a
+|SDLK_ASTERISK
+|-
+|43
+|0x2b
+|SDLK_PLUS
+|-
+|44
+|0x2c
+|SDLK_COMMA
+|-
+|45
+|0x2d
+|SDLK_MINUS
+|-
+|46
+|0x2e
+|SDLK_PERIOD
+|-
+|47
+|0x2f
+|SDLK_SLASH
+|-
+|48
+|0x30
+|SDLK_0
+|-
+|49
+|0x31
+|SDLK_1
+|-
+|50
+|0x32
+|SDLK_2
+|-
+|51
+|0x33
+|SDLK_3
+|-
+|52
+|0x34
+|SDLK_4
+|-
+|53
+|0x35
+|SDLK_5
+|-
+|54
+|0x36
+|SDLK_6
+|-
+|55
+|0x37
+|SDLK_7
+|-
+|56
+|0x38
+|SDLK_8
+|-
+|57
+|0x39
+|SDLK_9
+|-
+|58
+|0x3a
+|SDLK_COLON
+|-
+|59
+|0x3b
+|SDLK_SEMICOLON
+|-
+|60
+|0x3c
+|SDLK_LESS
+|-
+|61
+|0x3d
+|SDLK_EQUALS
+|-
+|62
+|0x3e
+|SDLK_GREATER
+|-
+|63
+|0x3f
+|SDLK_QUESTION
+|-
+|64
+|0x40
+|SDLK_AT
+|-
+|91
+|0x5b
+|SDLK_LEFTBRACKET
+|-
+|92
+|0x5c
+|SDLK_BACKSLASH
+|-
+|93
+|0x5d
+|SDLK_RIGHTBRACKET
+|-
+|94
+|0x5e
+|SDLK_CARET
+|-
+|95
+|0x5f
+|SDLK_UNDERSCORE
+|-
+|96
+|0x60
+|SDLK_BACKQUOTE
 |-
 |97
 |0x61
-|SDLK_A
-|}
-
-<<Color2(green,Note: the last line is an example of the type of data that belongs in each column.)>>
-
-<<Color2(green,Note: the table is to be organized numerically by the first column.)>>
+|SDLK_a
+|-
+|98
+|0x62
+|SDLK_b
+|-
+|99
+|0x63
+|SDLK_c
+|-
+|100
+|0x64
+|SDLK_d
+|-
+|101
+|0x65
+|SDLK_e
+|-
+|102
+|0x66
+|SDLK_f
+|-
+|103
+|0x67
+|SDLK_g
+|-
+|104
+|0x68
+|SDLK_h
+|-
+|105
+|0x69
+|SDLK_i
+|-
+|106
+|0x6a
+|SDLK_j
+|-
+|107
+|0x6b
+|SDLK_k
+|-
+|108
+|0x6c
+|SDLK_l
+|-
+|109
+|0x6d
+|SDLK_m
+|-
+|110
+|0x6e
+|SDLK_n
+|-
+|111
+|0x6f
+|SDLK_o
+|-
+|112
+|0x70
+|SDLK_p
+|-
+|113
+|0x71
+|SDLK_q
+|-
+|114
+|0x72
+|SDLK_r
+|-
+|115
+|0x73
+|SDLK_s
+|-
+|116
+|0x74
+|SDLK_t
+|-
+|117
+|0x75
+|SDLK_u
+|-
+|118
+|0x76
+|SDLK_v
+|-
+|119
+|0x77
+|SDLK_w
+|-
+|120
+|0x78
+|SDLK_x
+|-
+|121
+|0x79
+|SDLK_y
+|-
+|122
+|0x7a
+|SDLK_z
+|-
+|177
+|0xb1
+|SDLK_DELETE
+|-
+|2147483705
+|0x80000039
+|SDLK_CAPSLOCK
+|-
+|2147483706
+|0x8000003a
+|SDLK_F1
+|-
+|2147483707
+|0x8000003b
+|SDLK_F2
+|-
+|2147483708
+|0x8000003c
+|SDLK_F3
+|-
+|2147483709
+|0x8000003d
+|SDLK_F4
+|-
+|2147483710
+|0x8000003e
+|SDLK_F5
+|-
+|2147483711
+|0x8000003f
+|SDLK_F6
+|-
+|2147483712
+|0x80000040
+|SDLK_F7
+|-
+|2147483713
+|0x80000041
+|SDLK_F8
+|-
+|2147483714
+|0x80000042
+|SDLK_F9
+|-
+|2147483715
+|0x80000043
+|SDLK_F10
+|-
+|2147483716
+|0x80000044
+|SDLK_F11
+|-
+|2147483717
+|0x80000045
+|SDLK_F12
+|-
+|2147483718
+|0x80000046
+|SDLK_PRINTSCREEN
+|-
+|2147483719
+|0x80000047
+|SDLK_SCROLLLOCK
+|-
+|2147483720
+|0x80000048
+|SDLK_PAUSE
+|-
+|2147483721
+|0x80000049
+|SDLK_INSERT
+|-
+|2147483722
+|0x8000004a
+|SDLK_HOME
+|-
+|2147483723
+|0x8000004b
+|SDLK_PAGEUP
+|-
+|2147483725
+|0x8000004d
+|SDLK_END
+|-
+|2147483726
+|0x8000004e
+|SDLK_PAGEDOWN
+|-
+|2147483727
+|0x8000004f
+|SDLK_RIGHT
+|-
+|2147483728
+|0x80000050
+|SDLK_LEFT
+|-
+|2147483729
+|0x80000051
+|SDLK_DOWN
+|-
+|2147483730
+|0x80000052
+|SDLK_UP
+|-
+|2147483731
+|0x80000053
+|SDLK_NUMLOCKCLEAR
+|-
+|2147483732
+|0x80000054
+|SDLK_KP_DIVIDE
+|-
+|2147483733
+|0x80000055
+|SDLK_KP_MULTIPLY
+|-
+|2147483734
+|0x80000056
+|SDLK_KP_MINUS
+|-
+|2147483735
+|0x80000057
+|SDLK_KP_PLUS
+|-
+|2147483736
+|0x80000058
+|SDLK_KP_ENTER
+|-
+|2147483737
+|0x80000059
+|SDLK_KP_1
+|-
+|2147483738
+|0x8000005a
+|SDLK_KP_2
+|-
+|2147483739
+|0x8000005b
+|SDLK_KP_3
+|-
+|2147483740
+|0x8000005c
+|SDLK_KP_4
+|-
+|2147483741
+|0x8000005d
+|SDLK_KP_5
+|-
+|2147483742
+|0x8000005e
+|SDLK_KP_6
+|-
+|2147483743
+|0x8000005f
+|SDLK_KP_7
+|-
+|2147483744
+|0x80000060
+|SDLK_KP_8
+|-
+|2147483745
+|0x80000061
+|SDLK_KP_9
+|-
+|2147483746
+|0x80000062
+|SDLK_KP_0
+|-
+|2147483747
+|0x80000063
+|SDLK_KP_PERIOD
+|-
+|2147483749
+|0x80000065
+|SDLK_APPLICATION
+|-
+|2147483750
+|0x80000066
+|SDLK_POWER
+|-
+|2147483751
+|0x80000067
+|SDLK_KP_EQUALS
+|-
+|2147483752
+|0x80000068
+|SDLK_F13
+|-
+|2147483753
+|0x80000069
+|SDLK_F14
+|-
+|2147483754
+|0x8000006a
+|SDLK_F15
+|-
+|2147483755
+|0x8000006b
+|SDLK_F16
+|-
+|2147483756
+|0x8000006c
+|SDLK_F17
+|-
+|2147483757
+|0x8000006d
+|SDLK_F18
+|-
+|2147483758
+|0x8000006e
+|SDLK_F19
+|-
+|2147483759
+|0x8000006f
+|SDLK_F20
+|-
+|2147483760
+|0x80000070
+|SDLK_F21
+|-
+|2147483761
+|0x80000071
+|SDLK_F22
+|-
+|2147483762
+|0x80000072
+|SDLK_F23
+|-
+|2147483763
+|0x80000073
+|SDLK_F24
+|-
+|2147483764
+|0x80000074
+|SDLK_EXECUTE
+|-
+|2147483765
+|0x80000075
+|SDLK_HELP
+|-
+|2147483766
+|0x80000076
+|SDLK_MENU
+|-
+|2147483767
+|0x80000077
+|SDLK_SELECT
+|-
+|2147483768
+|0x80000078
+|SDLK_STOP
+|-
+|2147483769
+|0x80000079
+|SDLK_AGAIN
+|-
+|2147483770
+|0x8000007a
+|SDLK_UNDO
+|-
+|2147483771
+|0x8000007b
+|SDLK_CUT
+|-
+|2147483772
+|0x8000007c
+|SDLK_COPY
+|-
+|2147483773
+|0x8000007d
+|SDLK_PASTE
+|-
+|2147483774
+|0x8000007e
+|SDLK_FIND
+|-
+|2147483775
+|0x8000007f
+|SDLK_MUTE
+|-
+|2147483776
+|0x80000080
+|SDLK_VOLUMEUP
+|-
+|2147483777
+|0x80000081
+|SDLK_VOLUMEDOWN
+|-
+|2147483781
+|0x80000085
+|SDLK_KP_COMMA
+|-
+|2147483782
+|0x80000086
+|SDLK_KP_EQUALSAS400
+|-
+|2147483801
+|0x80000099
+|SDLK_ALTERASE
+|-
+|2147483802
+|0x8000009a
+|SDLK_SYSREQ
+|-
+|2147483803
+|0x8000009b
+|SDLK_CANCEL
+|-
+|2147483804
+|0x8000009c
+|SDLK_CLEAR
+|-
+|2147483805
+|0x8000009d
+|SDLK_PRIOR
+|-
+|2147483806
+|0x8000009e
+|SDLK_RETURN2
+|-
+|2147483807
+|0x8000009f
+|SDLK_SEPARATOR
+|-
+|2147483808
+|0x800000a0
+|SDLK_OUT
+|-
+|2147483809
+|0x800000a1
+|SDLK_OPER
+|-
+|2147483810
+|0x800000a2
+|SDLK_CLEARAGAIN
+|-
+|2147483811
+|0x800000a3
+|SDLK_CRSEL
+|-
+|2147483812
+|0x800000a4
+|SDLK_EXSEL
+|-
+|2147483824
+|0x800000b0
+|SDLK_KP_00
+|-
+|2147483825
+|0x800000b1
+|SDLK_KP_000
+|-
+|2147483826
+|0x800000b2
+|SDLK_THOUSANDSSEPARATOR
+|-
+|2147483827
+|0x800000b3
+|SDLK_DECIMALSEPARATOR
+|-
+|2147483828
+|0x800000b4
+|SDLK_CURRENCYUNIT
+|-
+|2147483829
+|0x800000b5
+|SDLK_CURRENCYSUBUNIT
+|-
+|2147483830
+|0x800000b6
+|SDLK_KP_LEFTPAREN
+|-
+|2147483831
+|0x800000b7
+|SDLK_KP_RIGHTPAREN
+|-
+|2147483832
+|0x800000b8
+|SDLK_KP_LEFTBRACE
+|-
+|2147483833
+|0x800000b9
+|SDLK_KP_RIGHTBRACE
+|-
+|2147483834
+|0x800000ba
+|SDLK_KP_TAB
+|-
+|2147483835
+|0x800000bb
+|SDLK_KP_BACKSPACE
+|-
+|2147483836
+|0x800000bc
+|SDLK_KP_A
+|-
+|2147483837
+|0x800000bd
+|SDLK_KP_B
+|-
+|2147483838
+|0x800000be
+|SDLK_KP_C
+|-
+|2147483839
+|0x800000bf
+|SDLK_KP_D
+|-
+|2147483840
+|0x800000c0
+|SDLK_KP_E
+|-
+|2147483841
+|0x800000c1
+|SDLK_KP_F
+|-
+|2147483842
+|0x800000c2
+|SDLK_KP_XOR
+|-
+|2147483843
+|0x800000c3
+|SDLK_KP_POWER
+|-
+|2147483844
+|0x800000c4
+|SDLK_KP_PERCENT
+|-
+|2147483845
+|0x800000c5
+|SDLK_KP_LESS
+|-
+|2147483846
+|0x800000c6
+|SDLK_KP_GREATER
+|-
+|2147483847
+|0x800000c7
+|SDLK_KP_AMPERSAND
+|-
+|2147483848
+|0x800000c8
+|SDLK_KP_DBLAMPERSAND
+|-
+|2147483849
+|0x800000c9
+|SDLK_KP_VERTICALBAR
+|-
+|2147483850
+|0x800000ca
+|SDLK_KP_DBLVERTICALBAR
+|-
+|2147483851
+|0x800000cb
+|SDLK_KP_COLON
+|-
+|2147483852
+|0x800000cc
+|SDLK_KP_HASH
+|-
+|2147483853
+|0x800000cd
+|SDLK_KP_SPACE
+|-
+|2147483854
+|0x800000ce
+|SDLK_KP_AT
+|-
+|2147483855
+|0x800000cf
+|SDLK_KP_EXCLAM
+|-
+|2147483856
+|0x800000d0
+|SDLK_KP_MEMSTORE
+|-
+|2147483857
+|0x800000d1
+|SDLK_KP_MEMRECALL
+|-
+|2147483858
+|0x800000d2
+|SDLK_KP_MEMCLEAR
+|-
+|2147483859
+|0x800000d3
+|SDLK_KP_MEMADD
+|-
+|2147483860
+|0x800000d4
+|SDLK_KP_MEMSUBTRACT
+|-
+|2147483861
+|0x800000d5
+|SDLK_KP_MEMMULTIPLY
+|-
+|2147483862
+|0x800000d6
+|SDLK_KP_MEMDIVIDE
+|-
+|2147483863
+|0x800000d7
+|SDLK_KP_PLUSMINUS
+|-
+|2147483864
+|0x800000d8
+|SDLK_KP_CLEAR
+|-
+|2147483865
+|0x800000d9
+|SDLK_KP_CLEARENTRY
+|-
+|2147483866
+|0x800000da
+|SDLK_KP_BINARY
+|-
+|2147483867
+|0x800000db
+|SDLK_KP_OCTAL
+|-
+|2147483868
+|0x800000dc
+|SDLK_KP_DECIMAL
+|-
+|2147483869
+|0x800000dd
+|SDLK_KP_HEXADECIMAL
+|-
+|2147483872
+|0x800000e0
+|SDLK_LCTRL
+|-
+|2147483873
+|0x800000e1
+|SDLK_LSHIFT
+|-
+|2147483874
+|0x800000e2
+|SDLK_LALT
+|-
+|2147483875
+|0x800000e3
+|SDLK_LGUI
+|-
+|2147483876
+|0x800000e4
+|SDLK_RCTRL
+|-
+|2147483877
+|0x800000e5
+|SDLK_RSHIFT
+|-
+|2147483878
+|0x800000e6
+|SDLK_RALT
+|-
+|2147483879
+|0x800000e7
+|SDLK_RGUI
+|-
+|2147483905
+|0x80000101
+|SDLK_MODE
+|-
+|2147483906
+|0x80000102
+|SDLK_AUDIONEXT
+|-
+|2147483907
+|0x80000103
+|SDLK_AUDIOPREV
+|-
+|2147483908
+|0x80000104
+|SDLK_AUDIOSTOP
+|-
+|2147483909
+|0x80000105
+|SDLK_AUDIOPLAY
+|-
+|2147483910
+|0x80000106
+|SDLK_AUDIOMUTE
+|-
+|2147483911
+|0x80000107
+|SDLK_MEDIASELECT
+|-
+|2147483912
+|0x80000108
+|SDLK_WWW
+|-
+|2147483913
+|0x80000109
+|SDLK_MAIL
+|-
+|2147483914
+|0x8000010a
+|SDLK_CALCULATOR
+|-
+|2147483915
+|0x8000010b
+|SDLK_COMPUTER
+|-
+|2147483916
+|0x8000010c
+|SDLK_AC_SEARCH
+|-
+|2147483917
+|0x8000010d
+|SDLK_AC_HOME
+|-
+|2147483918
+|0x8000010e
+|SDLK_AC_BACK
+|-
+|2147483919
+|0x8000010f
+|SDLK_AC_FORWARD
+|-
+|2147483920
+|0x80000110
+|SDLK_AC_STOP
+|-
+|2147483921
+|0x80000111
+|SDLK_AC_REFRESH
+|-
+|2147483922
+|0x80000112
+|SDLK_AC_BOOKMARKS
+|-
+|2147483923
+|0x80000113
+|SDLK_BRIGHTNESSDOWN
+|-
+|2147483924
+|0x80000114
+|SDLK_BRIGHTNESSUP
+|-
+|2147483925
+|0x80000115
+|SDLK_DISPLAYSWITCH
+|-
+|2147483926
+|0x80000116
+|SDLK_KBDILLUMTOGGLE
+|-
+|2147483927
+|0x80000117
+|SDLK_KBDILLUMDOWN
+|-
+|2147483928
+|0x80000118
+|SDLK_KBDILLUMUP
+|-
+|2147483929
+|0x80000119
+|SDLK_EJECT
+|-
+|2147483930
+|0x8000011a
+|SDLK_SLEEP
