--- a/SDLKeycodeLookup.mediawiki
+++ b/SDLKeycodeLookup.mediawiki
@@ -5,292 +5,292 @@
 = SDL Keycode Lookup Table =
 
 {|
-|<bgcolor="#EDEDED">''Decimal Value''
-|<bgcolor="#EDEDED">''Hexadecimal Value''
+|<bgcolor="#EDEDED">''Unsigned Decimal Value''
+|<bgcolor="#EDEDED">''Hex Value (Char)''
 |<bgcolor="#EDEDED">''SDL_Keycode Constant''
 |-
 |0
-|0x00
+|0x00 ('\0')
 |SDLK_UNKNOWN
 |-
 |8
-|0x08
+|0x08 ('\b')
 |SDLK_BACKSPACE
 |-
 |9
-|0x09
+|0x09 ('\t')
 |SDLK_TAB
 |-
 |13
-|0x0d
+|0x0D ('\r')
 |SDLK_RETURN
 |-
 |27
-|0x1b
+|0x1B ('\033')
 |SDLK_ESCAPE
 |-
 |32
-|0x20
+|0x20 (' ')
 |SDLK_SPACE
 |-
 |33
-|0x21
+|0x21 ('!')
 |SDLK_EXCLAIM
 |-
 |34
-|0x22
+|0x22 ('\"')
 |SDLK_QUOTEDBL
 |-
 |35
-|0x23
+|0x23 ('#')
 |SDLK_HASH
 |-
 |36
-|0x24
+|0x24 ('$')
 |SDLK_DOLLAR
 |-
 |37
-|0x25
+|0x25 ('%')
 |SDLK_PERCENT
 |-
 |38
-|0x26
+|0x26 ('&')
 |SDLK_AMPERSAND
 |-
 |39
-|0x27
+|0x27 ('\&#39;')
 |SDLK_QUOTE
 |-
 |40
-|0x28
+|0x28 ('(')
 |SDLK_LEFTPAREN
 |-
 |41
-|0x29
+|0x29 (')')
 |SDLK_RIGHTPAREN
 |-
 |42
-|0x2a
+|0x2A ('*')
 |SDLK_ASTERISK
 |-
 |43
-|0x2b
+|0x2B ('+')
 |SDLK_PLUS
 |-
 |44
-|0x2c
+|0x2C (',')
 |SDLK_COMMA
 |-
 |45
-|0x2d
+|0x2D ('-')
 |SDLK_MINUS
 |-
 |46
-|0x2e
+|0x2E ('.')
 |SDLK_PERIOD
 |-
 |47
-|0x2f
+|0x2F ('/')
 |SDLK_SLASH
 |-
 |48
-|0x30
+|0x30 ('0')
 |SDLK_0
 |-
 |49
-|0x31
+|0x31 ('1')
 |SDLK_1
 |-
 |50
-|0x32
+|0x32 ('2')
 |SDLK_2
 |-
 |51
-|0x33
+|0x33 ('3')
 |SDLK_3
 |-
 |52
-|0x34
+|0x34 ('4')
 |SDLK_4
 |-
 |53
-|0x35
+|0x35 ('5')
 |SDLK_5
 |-
 |54
-|0x36
+|0x36 ('6')
 |SDLK_6
 |-
 |55
-|0x37
+|0x37 ('7')
 |SDLK_7
 |-
 |56
-|0x38
+|0x38 ('8')
 |SDLK_8
 |-
 |57
-|0x39
+|0x39 ('9')
 |SDLK_9
 |-
 |58
-|0x3a
+|0x3A (':')
 |SDLK_COLON
 |-
 |59
-|0x3b
+|0x3B (';')
 |SDLK_SEMICOLON
 |-
 |60
-|0x3c
+|0x3C ('<')
 |SDLK_LESS
 |-
 |61
-|0x3d
+|0x3D ('=')
 |SDLK_EQUALS
 |-
 |62
-|0x3e
+|0x3E ('>')
 |SDLK_GREATER
 |-
 |63
-|0x3f
+|0x3F ('?')
 |SDLK_QUESTION
 |-
 |64
-|0x40
+|0x40 ('@')
 |SDLK_AT
 |-
 |91
-|0x5b
+|0x5B ('[')
 |SDLK_LEFTBRACKET
 |-
 |92
-|0x5c
+|0x5C ('\\')
 |SDLK_BACKSLASH
 |-
 |93
-|0x5d
+|0x5D (']')
 |SDLK_RIGHTBRACKET
 |-
 |94
-|0x5e
+|0x5E ('^')
 |SDLK_CARET
 |-
 |95
-|0x5f
+|0x5F ('_')
 |SDLK_UNDERSCORE
 |-
 |96
-|0x60
+|0x60 ('&#96;')
 |SDLK_BACKQUOTE
 |-
 |97
-|0x61
+|0x61 ('a')
 |SDLK_a
 |-
 |98
-|0x62
+|0x62 ('b')
 |SDLK_b
 |-
 |99
-|0x63
+|0x63 ('c')
 |SDLK_c
 |-
 |100
-|0x64
+|0x64 ('d')
 |SDLK_d
 |-
 |101
-|0x65
+|0x65 ('e')
 |SDLK_e
 |-
 |102
-|0x66
+|0x66 ('f')
 |SDLK_f
 |-
 |103
-|0x67
+|0x67 ('g')
 |SDLK_g
 |-
 |104
-|0x68
+|0x68 ('h')
 |SDLK_h
 |-
 |105
-|0x69
+|0x69 ('i')
 |SDLK_i
 |-
 |106
-|0x6a
+|0x6A ('j')
 |SDLK_j
 |-
 |107
-|0x6b
+|0x6B ('k')
 |SDLK_k
 |-
 |108
-|0x6c
+|0x6C ('l')
 |SDLK_l
 |-
 |109
-|0x6d
+|0x6D ('m')
 |SDLK_m
 |-
 |110
-|0x6e
+|0x6E ('n')
 |SDLK_n
 |-
 |111
-|0x6f
+|0x6F ('o')
 |SDLK_o
 |-
 |112
-|0x70
+|0x70 ('p')
 |SDLK_p
 |-
 |113
-|0x71
+|0x71 ('q')
 |SDLK_q
 |-
 |114
-|0x72
+|0x72 ('r')
 |SDLK_r
 |-
 |115
-|0x73
+|0x73 ('s')
 |SDLK_s
 |-
 |116
-|0x74
+|0x74 ('t')
 |SDLK_t
 |-
 |117
-|0x75
+|0x75 ('u')
 |SDLK_u
 |-
 |118
-|0x76
+|0x76 ('v')
 |SDLK_v
 |-
 |119
-|0x77
+|0x77 ('w')
 |SDLK_w
 |-
 |120
-|0x78
+|0x78 ('x')
 |SDLK_x
 |-
 |121
-|0x79
+|0x79 ('y')
 |SDLK_y
 |-
 |122
-|0x7a
+|0x7A ('z')
 |SDLK_z
 |-
 |177
-|0xb1
+|0xB1 ('\177')
 |SDLK_DELETE
 |-
 |2147483705
@@ -298,27 +298,27 @@
 |SDLK_CAPSLOCK
 |-
 |2147483706
-|0x8000003a
+|0x8000003A
 |SDLK_F1
 |-
 |2147483707
-|0x8000003b
+|0x8000003B
 |SDLK_F2
 |-
 |2147483708
-|0x8000003c
+|0x8000003C
 |SDLK_F3
 |-
 |2147483709
-|0x8000003d
+|0x8000003D
 |SDLK_F4
 |-
 |2147483710
-|0x8000003e
+|0x8000003E
 |SDLK_F5
 |-
 |2147483711
-|0x8000003f
+|0x8000003F
 |SDLK_F6
 |-
 |2147483712
@@ -362,23 +362,23 @@
 |SDLK_INSERT
 |-
 |2147483722
-|0x8000004a
+|0x8000004A
 |SDLK_HOME
 |-
 |2147483723
-|0x8000004b
+|0x8000004B
 |SDLK_PAGEUP
 |-
 |2147483725
-|0x8000004d
+|0x8000004D
 |SDLK_END
 |-
 |2147483726
-|0x8000004e
+|0x8000004E
 |SDLK_PAGEDOWN
 |-
 |2147483727
-|0x8000004f
+|0x8000004F
 |SDLK_RIGHT
 |-
 |2147483728
@@ -422,27 +422,27 @@
 |SDLK_KP_1
 |-
 |2147483738
-|0x8000005a
+|0x8000005A
 |SDLK_KP_2
 |-
 |2147483739
-|0x8000005b
+|0x8000005B
 |SDLK_KP_3
 |-
 |2147483740
-|0x8000005c
+|0x8000005C
 |SDLK_KP_4
 |-
 |2147483741
-|0x8000005d
+|0x8000005D
 |SDLK_KP_5
 |-
 |2147483742
-|0x8000005e
+|0x8000005E
 |SDLK_KP_6
 |-
 |2147483743
-|0x8000005f
+|0x8000005F
 |SDLK_KP_7
 |-
 |2147483744
@@ -482,27 +482,27 @@
 |SDLK_F14
 |-
 |2147483754
-|0x8000006a
+|0x8000006A
 |SDLK_F15
 |-
 |2147483755
-|0x8000006b
+|0x8000006B
 |SDLK_F16
 |-
 |2147483756
-|0x8000006c
+|0x8000006C
 |SDLK_F17
 |-
 |2147483757
-|0x8000006d
+|0x8000006D
 |SDLK_F18
 |-
 |2147483758
-|0x8000006e
+|0x8000006E
 |SDLK_F19
 |-
 |2147483759
-|0x8000006f
+|0x8000006F
 |SDLK_F20
 |-
 |2147483760
@@ -546,27 +546,27 @@
 |SDLK_AGAIN
 |-
 |2147483770
-|0x8000007a
+|0x8000007A
 |SDLK_UNDO
 |-
 |2147483771
-|0x8000007b
+|0x8000007B
 |SDLK_CUT
 |-
 |2147483772
-|0x8000007c
+|0x8000007C
 |SDLK_COPY
 |-
 |2147483773
-|0x8000007d
+|0x8000007D
 |SDLK_PASTE
 |-
 |2147483774
-|0x8000007e
+|0x8000007E
 |SDLK_FIND
 |-
 |2147483775
-|0x8000007f
+|0x8000007F
 |SDLK_MUTE
 |-
 |2147483776
@@ -590,263 +590,263 @@
 |SDLK_ALTERASE
 |-
 |2147483802
-|0x8000009a
+|0x8000009A
 |SDLK_SYSREQ
 |-
 |2147483803
-|0x8000009b
+|0x8000009B
 |SDLK_CANCEL
 |-
 |2147483804
-|0x8000009c
+|0x8000009C
 |SDLK_CLEAR
 |-
 |2147483805
-|0x8000009d
+|0x8000009D
 |SDLK_PRIOR
 |-
 |2147483806
-|0x8000009e
+|0x8000009E
 |SDLK_RETURN2
 |-
 |2147483807
-|0x8000009f
+|0x8000009F
 |SDLK_SEPARATOR
 |-
 |2147483808
-|0x800000a0
+|0x800000A0
 |SDLK_OUT
 |-
 |2147483809
-|0x800000a1
+|0x800000A1
 |SDLK_OPER
 |-
 |2147483810
-|0x800000a2
+|0x800000A2
 |SDLK_CLEARAGAIN
 |-
 |2147483811
-|0x800000a3
+|0x800000A3
 |SDLK_CRSEL
 |-
 |2147483812
-|0x800000a4
+|0x800000A4
 |SDLK_EXSEL
 |-
 |2147483824
-|0x800000b0
+|0x800000B0
 |SDLK_KP_00
 |-
 |2147483825
-|0x800000b1
+|0x800000B1
 |SDLK_KP_000
 |-
 |2147483826
-|0x800000b2
+|0x800000B2
 |SDLK_THOUSANDSSEPARATOR
 |-
 |2147483827
-|0x800000b3
+|0x800000B3
 |SDLK_DECIMALSEPARATOR
 |-
 |2147483828
-|0x800000b4
+|0x800000B4
 |SDLK_CURRENCYUNIT
 |-
 |2147483829
-|0x800000b5
+|0x800000B5
 |SDLK_CURRENCYSUBUNIT
 |-
 |2147483830
-|0x800000b6
+|0x800000B6
 |SDLK_KP_LEFTPAREN
 |-
 |2147483831
-|0x800000b7
+|0x800000B7
 |SDLK_KP_RIGHTPAREN
 |-
 |2147483832
-|0x800000b8
+|0x800000B8
 |SDLK_KP_LEFTBRACE
 |-
 |2147483833
-|0x800000b9
+|0x800000B9
 |SDLK_KP_RIGHTBRACE
 |-
 |2147483834
-|0x800000ba
+|0x800000BA
 |SDLK_KP_TAB
 |-
 |2147483835
-|0x800000bb
+|0x800000BB
 |SDLK_KP_BACKSPACE
 |-
 |2147483836
-|0x800000bc
+|0x800000BC
 |SDLK_KP_A
 |-
 |2147483837
-|0x800000bd
+|0x800000BD
 |SDLK_KP_B
 |-
 |2147483838
-|0x800000be
+|0x800000BE
 |SDLK_KP_C
 |-
 |2147483839
-|0x800000bf
+|0x800000BF
 |SDLK_KP_D
 |-
 |2147483840
-|0x800000c0
+|0x800000C0
 |SDLK_KP_E
 |-
 |2147483841
-|0x800000c1
+|0x800000C1
 |SDLK_KP_F
 |-
 |2147483842
-|0x800000c2
+|0x800000C2
 |SDLK_KP_XOR
 |-
 |2147483843
-|0x800000c3
+|0x800000C3
 |SDLK_KP_POWER
 |-
 |2147483844
-|0x800000c4
+|0x800000C4
 |SDLK_KP_PERCENT
 |-
 |2147483845
-|0x800000c5
+|0x800000C5
 |SDLK_KP_LESS
 |-
 |2147483846
-|0x800000c6
+|0x800000C6
 |SDLK_KP_GREATER
 |-
 |2147483847
-|0x800000c7
+|0x800000C7
 |SDLK_KP_AMPERSAND
 |-
 |2147483848
-|0x800000c8
+|0x800000C8
 |SDLK_KP_DBLAMPERSAND
 |-
 |2147483849
-|0x800000c9
+|0x800000C9
 |SDLK_KP_VERTICALBAR
 |-
 |2147483850
-|0x800000ca
+|0x800000CA
 |SDLK_KP_DBLVERTICALBAR
 |-
 |2147483851
-|0x800000cb
+|0x800000CB
 |SDLK_KP_COLON
 |-
 |2147483852
-|0x800000cc
+|0x800000CC
 |SDLK_KP_HASH
 |-
 |2147483853
-|0x800000cd
+|0x800000CD
 |SDLK_KP_SPACE
 |-
 |2147483854
-|0x800000ce
+|0x800000CE
 |SDLK_KP_AT
 |-
 |2147483855
-|0x800000cf
+|0x800000CF
 |SDLK_KP_EXCLAM
 |-
 |2147483856
-|0x800000d0
+|0x800000D0
 |SDLK_KP_MEMSTORE
 |-
 |2147483857
-|0x800000d1
+|0x800000D1
 |SDLK_KP_MEMRECALL
 |-
 |2147483858
-|0x800000d2
+|0x800000D2
 |SDLK_KP_MEMCLEAR
 |-
 |2147483859
-|0x800000d3
+|0x800000D3
 |SDLK_KP_MEMADD
 |-
 |2147483860
-|0x800000d4
+|0x800000D4
 |SDLK_KP_MEMSUBTRACT
 |-
 |2147483861
-|0x800000d5
+|0x800000D5
 |SDLK_KP_MEMMULTIPLY
 |-
 |2147483862
-|0x800000d6
+|0x800000D6
 |SDLK_KP_MEMDIVIDE
 |-
 |2147483863
-|0x800000d7
+|0x800000D7
 |SDLK_KP_PLUSMINUS
 |-
 |2147483864
-|0x800000d8
+|0x800000D8
 |SDLK_KP_CLEAR
 |-
 |2147483865
-|0x800000d9
+|0x800000D9
 |SDLK_KP_CLEARENTRY
 |-
 |2147483866
-|0x800000da
+|0x800000DA
 |SDLK_KP_BINARY
 |-
 |2147483867
-|0x800000db
+|0x800000DB
 |SDLK_KP_OCTAL
 |-
 |2147483868
-|0x800000dc
+|0x800000DC
 |SDLK_KP_DECIMAL
 |-
 |2147483869
-|0x800000dd
+|0x800000DD
 |SDLK_KP_HEXADECIMAL
 |-
 |2147483872
-|0x800000e0
+|0x800000E0
 |SDLK_LCTRL
 |-
 |2147483873
-|0x800000e1
+|0x800000E1
 |SDLK_LSHIFT
 |-
 |2147483874
-|0x800000e2
+|0x800000E2
 |SDLK_LALT
 |-
 |2147483875
-|0x800000e3
+|0x800000E3
 |SDLK_LGUI
 |-
 |2147483876
-|0x800000e4
+|0x800000E4
 |SDLK_RCTRL
 |-
 |2147483877
-|0x800000e5
+|0x800000E5
 |SDLK_RSHIFT
 |-
 |2147483878
-|0x800000e6
+|0x800000E6
 |SDLK_RALT
 |-
 |2147483879
-|0x800000e7
+|0x800000E7
 |SDLK_RGUI
 |-
 |2147483905
@@ -886,27 +886,27 @@
 |SDLK_MAIL
 |-
 |2147483914
-|0x8000010a
+|0x8000010A
 |SDLK_CALCULATOR
 |-
 |2147483915
-|0x8000010b
+|0x8000010B
 |SDLK_COMPUTER
 |-
 |2147483916
-|0x8000010c
+|0x8000010C
 |SDLK_AC_SEARCH
 |-
 |2147483917
-|0x8000010d
+|0x8000010D
 |SDLK_AC_HOME
 |-
 |2147483918
-|0x8000010e
+|0x8000010E
 |SDLK_AC_BACK
 |-
 |2147483919
-|0x8000010f
+|0x8000010F
 |SDLK_AC_FORWARD
 |-
 |2147483920
@@ -950,5 +950,5 @@
 |SDLK_EJECT
 |-
 |2147483930
-|0x8000011a
+|0x8000011A
 |SDLK_SLEEP
