update content - migrate entry from 1.2

--- a/Tutorials.mediawiki
+++ b/Tutorials.mediawiki
@@ -29,5 +29,10 @@ There are a number of SDL tutorials available from different sources.
 * [[Tutorials/TextInput|Text Input]]
 : Using SDL for text inputs with specific consideration for international users.
 
+== Threads ==
+
+* [http://ansuz.sooke.bc.ca/software/sdl-condvars.php Condition variables in SDL]
+: A good discussion of condition variables, in computer science rather than gaming context. Some mention of mutex and semaphore use.
+
 == SDL 1.2 ==
 : [http://wiki.libsdl.org/moin.cgi/SDL1.2Tutorials SDL 1.2 Tutorials]
