--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -21,7 +21,7 @@ Use the links under the '''Navigation Links''' heading in the left-hand menu to 
 * [[FAQs]]
 * [http://forums.libsdl.org/ Forums]
 
-Looking for a basic introduction to SDL 1.3?  Check out the [http://wiki.libsdl.org/moin.cgi/Introduction Introduction] page.
+For an introduction to the features in SDL 1.3 check out the [http://wiki.libsdl.org/moin.cgi/Introduction Introduction] page.
 
 Users wishing to contribute content should follow the guidelines provided in the [http://wiki.libsdl.org/moin.cgi/Contributing Contributing] guide.
 
