--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -6,6 +6,9 @@
 <!-- pragma section-numbers off -->
 <!-- acl All:read -->
 = Simple DirectMedia Layer 1.3 Wiki =
+
+~+Welcome to SDL 1.3!+~
+
 This wiki is your portal to documentation and other resources for SDL 1.3.
 <br/>
 You can find the old SDL 1.2 wiki at: http://www.libsdl.org/cgi/docwiki.cgi.
@@ -30,3 +33,7 @@ Use the links under the '''Navigation Links''' heading in the left-hand menu to 
 : A great place to keep up with the latest news, help other users out, and ask questions.
 * [[Contributing]]
 : Users wishing to contribute content to the wiki should follow the guidelines provided in this guide.
+
+We hope you find everything you are looking for and enjoy using SDL.  If anything is not addressed somewhere here feel free to take advantage of the Feedback form in the upper right or send an email to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
+
+~+Enjoy!+~
