--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -318,16 +318,20 @@ Verbatim text as it should be typed, or appear as code or with markup. This will
 == Miscellaneous Notes ==
 
 === Style Guide Terminology ===
-Here are some terms used in the style guides that are intended to have specific meanings or purposes that may or may not be intuitively clear:
+Some terms used in the style guides are intended to have specific meanings or purposes that may or may not be as intuitively clear as we hope.  Explanations are provided here to avoid any potential confusion.
 <span id="api"></span>
 : '''API Page'''
 : Refers to any Function, Structure, or Enumeration page.
 <span id="category"></span>
 : '''Category Page'''
 : Refers to the front page of each major category found in the [http://wiki.libsdl.org/moin.cgi/APIByCategory API by Category] list.
+: '''''If...'''''
+: Found at the beginning of detailed style guide sections, this indicates options for you to choose from.  Select the one(s) that best suit your content given the context on the page you are editing and follow the related instructions. (See ''Action'' through ''Example'' below.)  
+: In some cases a portion of the statement following ''If'' will be __underlined__ to help you quickly scan for the option(s) that you need.
 : '''''Action'':'''
-: The instructions immediately following ''Action'': indicate what you should do to apply the style guide guidelines.  In some cases you will select the ''Action'' that is relevant to your particular content (usually from a table of options).  In many cases everyone making a certain type of edit should follow the same ''Action''.
+: The instructions immediately following ''Action'': indicate what you should do to apply the style guide guidelines.  In some cases you will select an ''Action'' that is relevant to your particular content (usually from a table of options).  In many cases everyone making a certain type of edit should follow the same ''Action'' in which case no options will be given.
 : ''Action'' is almost always followed by ''Markup'' and may also be followed by ''Note'', ''<<Color2(red,Important!)>>'', and/or ''Example'' (see below).
+: /!\ Please read any ''Note'' or ''<<Color2(red,Important!)>>'' comment related to the ''Action''(s) you choose.  If you are otherwise familiar with the wiki and it's markup the other sections can usually be skipped.
 : '''''Markup'':'''
 : The instructions immediately following ''Markup'': indicate the critical markup that would be used in the text editor to complete the ''Action'' above it.
 : '''''Note'':'''
@@ -336,9 +340,8 @@ Here are some terms used in the style guides that are intended to have specific 
 : Similar to a ''Note'', but indicates that the noted information should be heeded by all contributors. 
 : '''''Example'':'''
 : Points to a place in the wiki where the related ''Action'' and ''Markup'' can be observed.
-
-
-
+<br/>
+<br/>
 === Other Help ===
 Some other wiki help that might be of interest or helpful to find quickly:
 :[http://wiki.libsdl.org/moin.cgi/HelpIndex HelpIndex]
