--- a/SGTutorials.mediawiki
+++ b/SGTutorials.mediawiki
@@ -10,12 +10,13 @@ The [http://wiki.libsdl.org/moin.cgi/Tutorials Tutorials] page provides links to
 <span id="ToC"></span>
 
 == General Guidelines ==
-''Most tutorials on the Tutorials page are external resources.  This guide will help you add an external tutorial to the list as well as detail how to create a new tutorial from within the wiki if you prefer.''
+''Most tutorials on the Tutorials page are external resources.  This guide will help you add an external tutorial to the list.<br/>If you do not have an outside location for your tutorial, this guide also details how to create a tutorial from within the wiki and add it to the list when it is ready.''
 
 '''Please post appropriate tutorials that may benefit other users.  
 * Do not post anything that you do not have permission to post publicly.'''
 <br/>
 <br/>
+<span id="existing"></span>
 == Adding An Existing Tutorial ==
 ''The following instructions apply if you have already created your tutorial.  If you still need to create your tutorial see [[#creating|Creating A New Tutorial]] below first.''
  1. Begin by going to the [http://wiki.libsdl.org/moin.cgi/Tutorials Tutorials] page and selecting <<Color2(blue,Edit (Text))>> or <<Color2(blue,Edit (GUI))>> in the left column to begin editing.
@@ -23,7 +24,7 @@ The [http://wiki.libsdl.org/moin.cgi/Tutorials Tutorials] page provides links to
  1. Scroll down in the edit window to the section that best fits your tutorial (eg: ```== Video ==```, {{{== Audio ==}}}, etc.).<br/> See [[#heading|Creating A New Heading]] if one does not exist.
  1. Find information relevant to your tutorial in the style guide sections [[#formatting|below]] and apply the appropriate formatting as you create your content.
  1. Preview your work as you go by clicking <<Color2(blue,Preview)>> in the left column.  
- 1. Save your work when you are satisfied with your edits by clicking <<Color2(blue,Save Changes)>> in the left column.  
+ 1. Save your work by clicking <<Color2(blue,Save Changes)>> in the left column after you are satisfied with your content and have filled in the Comment field under the editing box.  
 For additional assistance with editing, saving, or wiki-appropriate markup see the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] Style Guide.
 <br/>
 <br/>
@@ -33,11 +34,15 @@ For additional assistance with editing, saving, or wiki-appropriate markup see t
 
 === Location ===
 : ''Action'': Place your tutorial listing anywhere within the relevant section.  
-: Tutorials discussing the same specific topic should be grouped together within each major section.
+: Tutorials discussing the same specific sub-topic should be grouped together within each major section.
 : ''Markup'': see [[#Format|Format]] for details
+: ''Note'': It is preferable to have a blank line above and below your entry, separating it from any other entries or markup.
 
 === Format ===
- 1. ''Action'': Create a linked title for your tutorial.<br/> ''Markup'':  Place a single space followed by an asterisk (and an optional space) before your link.  A link is created by surrounding the link address and link text, separated by a pipe with no spaces, by double brackets: ```
+ 1. ''Action'': Create a linked title for your tutorial.<br/> ''Markup'':  Place a single space followed by an asterisk (and an optional space) before your link.
+: A link is created by placing double brackets (```[[ ]]```) on either side of the <code>link address</code> and <code>link text</code>, which are separated by a pipe (|) with no spaces.
+: <code>link text</code> should be a short, simple title for your tutorial.
+ ```
  * [[link address|link text]]
 ```
  1. ''Action'': Add a ''brief'' description of what the tutorial covers on the line below the link.<br/> ''Markup'': Place two blank spaces followed by a period (and an optional space) before your description text.
@@ -45,9 +50,10 @@ For additional assistance with editing, saving, or wiki-appropriate markup see t
   . Description text
 ```
 
- The addition should appear as follows (existing header shown to illustrate spacing more clearly):
+The total addition should appear as follows (existing header shown to illustrate spacing more clearly):
  ```
 == Audio ==
+
  * [[http://your.tutorial.html|Using Audio in SDL]]
   . This tutorial discusses how to set up audio playback using SDL 1.3.
 ```
@@ -56,15 +62,16 @@ For additional assistance with editing, saving, or wiki-appropriate markup see t
 
 <span id="heading"></span>
 === Creating A New Heading ===
-'''Please use existing headings as much as possible.'''
+/!\ '''Please use existing headings whenever possible.'''
 
-''If'' your tutorial does not fit into any of the existing headings you may create a new heading for it.  The headings should roughly match those found on the [http://wiki.libsdl.org/moin.cgi/APIByCategory API by Category] page.  
-
-To create a new heading:
+Assuming your tutorial does not fit into any of the existing headings: 
+: ''Action'': Create a new heading for it.
+: The headings should roughly match those found on the [http://wiki.libsdl.org/moin.cgi/APIByCategory API by Category] page.  
 : ''Markup'': Place the following markup at the location for the new heading.
   ```== Heading ==```
-: Replace "<code>Heading</code>" with the new heading name (ie: Initialization, Events, etc.)
-: Return to [[Adding An Existing Tutorial]] to complete the process.
+: Replace <code>Heading</code> with the new heading name (ie: Initialization, Events, etc.)
+: It is preferable to have a blank space above and below a heading.
+: Return to [[#existing|Adding An Existing Tutorial]] to complete the process.
 
 
 
@@ -76,7 +83,8 @@ To create a new heading:
 
 
 
-===  ===
+----
+
 When your remark includes a reference to a function parameter:
 {|
 |<( |3 30%>''If'' you are referencing a parameter __on the same page__
